--- a/core/src/main/resources/fxml/dialog/lda_interact.fxml
+++ b/core/src/main/resources/fxml/dialog/lda_interact.fxml
@@ -13,7 +13,7 @@
     <ScrollPane vbarPolicy="AS_NEEDED" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0"
                 AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="120.0">
         <VBox fx:id="vBox" maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity"
-              minWidth="-Infinity" prefHeight="720.0" prefWidth="760.0"/>
+              minWidth="-Infinity" prefWidth="760.0"/>
     </ScrollPane>
     <Button fx:id="button" prefHeight="30.0" prefWidth="100.0" text="done"
             AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="350.0"/>
