--- a/core/src/main/resources/fxml/scene/record.fxml
+++ b/core/src/main/resources/fxml/scene/record.fxml
@@ -12,57 +12,46 @@
 <?import javafx.scene.text.Font?>
 <HBox prefHeight="800.0" prefWidth="1280.0" xmlns:fx="http://javafx.com/fxml">
     <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="640.0">
-        <AnchorPane minHeight="0.0" minWidth="0.0">
-            <ListView fx:id="corpusListView" layoutX="191.0" layoutY="58.0" prefHeight="395.0"
-                      prefWidth="638.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                      AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+        <AnchorPane>
+            <ListView fx:id="corpusListView" AnchorPane.bottomAnchor="0.0"
+                      AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                      AnchorPane.topAnchor="0.0"/>
         </AnchorPane>
-        <AnchorPane minHeight="0.0" minWidth="0.0">
-            <ListView fx:id="arcticListView" layoutX="14.0" layoutY="139.0" prefHeight="395.0"
-                      prefWidth="638.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                      AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+        <AnchorPane>
+            <ListView fx:id="arcticListView" AnchorPane.bottomAnchor="0.0"
+                      AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                      AnchorPane.topAnchor="0.0"/>
         </AnchorPane>
     </SplitPane>
     <AnchorPane prefHeight="200.0" prefWidth="640.0">
-        <Label alignment="CENTER" layoutX="274.0" layoutY="50.0" prefHeight="30.0"
-               prefWidth="160.0" text="Sentence to pronounce:" AnchorPane.leftAnchor="10.0"
-               AnchorPane.rightAnchor="10.0"/>
+        <Label alignment="CENTER" prefHeight="30.0" text="Sentence to pronounce:"
+               AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0"
+               AnchorPane.topAnchor="50.0"/>
         <Label fx:id="sentenceLabel" alignment="CENTER" textAlignment="CENTER" wrapText="true"
-               layoutX="302.0" layoutY="160.0" prefHeight="100.0" AnchorPane.leftAnchor="10.0"
-               AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="90.0">
+               prefHeight="100.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0"
+               AnchorPane.topAnchor="90.0">
             <font>
                 <Font name="System Bold" size="15.0"/>
             </font>
         </Label>
-        <ProgressBar fx:id="leftProgressBar" layoutX="-8.0" layoutY="313.0" prefHeight="30.0"
-                     prefWidth="200.0" progress="0.0" rotate="-90.0" AnchorPane.leftAnchor="10.0"
-                     AnchorPane.topAnchor="320.0"/>
-        <ProgressBar fx:id="rightProgressBar" layoutX="407.0" layoutY="321.0" prefHeight="30.0"
-                     prefWidth="200.0" progress="0.0" rotate="-90.0" AnchorPane.leftAnchor="430.0"
-                     AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="320.0"/>
-        <AnchorPane layoutX="227.0" layoutY="435.0" prefHeight="30.0" prefWidth="200.0"
-                    AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0"
+        <ProgressBar fx:id="leftProgressBar" prefHeight="30.0" prefWidth="200.0" progress="0.0"
+                     rotate="-90.0" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="320.0"/>
+        <ProgressBar fx:id="rightProgressBar" prefHeight="30.0" prefWidth="200.0" progress="0.0"
+                     rotate="-90.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="320.0"/>
+        <AnchorPane prefHeight="30.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0"
                     AnchorPane.topAnchor="450.0">
-            <Button fx:id="eraseButton" layoutY="1.0" mnemonicParsing="false" prefHeight="30.0"
-                    prefWidth="50.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                    AnchorPane.topAnchor="0.0"/>
-            <ToggleButton fx:id="recordToggleButton" layoutX="137.0" layoutY="1.0"
-                          mnemonicParsing="false" prefHeight="30.0" prefWidth="50.0"
-                          AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="150.0"
-                          AnchorPane.topAnchor="0.0"/>
-            <ToggleButton fx:id="playToggleButton" layoutX="310.0" layoutY="1.0"
-                          mnemonicParsing="false" prefHeight="30.0" prefWidth="50.0"
-                          AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="420.0"
-                          AnchorPane.topAnchor="0.0"/>
-            <Button fx:id="saveButton" layoutX="558.0" layoutY="3.0" mnemonicParsing="false"
-                    prefHeight="30.0" prefWidth="50.0" AnchorPane.bottomAnchor="0.0"
+            <Button fx:id="eraseButton" prefWidth="50.0" AnchorPane.bottomAnchor="0.0"
+                    AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+            <ToggleButton fx:id="recordToggleButton" prefWidth="50.0" AnchorPane.bottomAnchor="0.0"
+                          AnchorPane.leftAnchor="150.0" AnchorPane.topAnchor="0.0"/>
+            <ToggleButton fx:id="playToggleButton" prefWidth="50.0" AnchorPane.bottomAnchor="0.0"
+                          AnchorPane.leftAnchor="420.0" AnchorPane.topAnchor="0.0"/>
+            <Button fx:id="saveButton" prefWidth="50.0" AnchorPane.bottomAnchor="0.0"
                     AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
         </AnchorPane>
-        <Button fx:id="backButton" layoutX="490.0" layoutY="762.0" mnemonicParsing="false"
-                prefHeight="30.0" prefWidth="60.0" text="back" AnchorPane.bottomAnchor="10.0"
-                AnchorPane.rightAnchor="80.0"/>
-        <Button fx:id="doneButton" layoutX="564.0" layoutY="753.0" mnemonicParsing="false"
-                prefHeight="30.0" prefWidth="60.0" text="done" AnchorPane.bottomAnchor="10.0"
-                AnchorPane.rightAnchor="10.0"/>
+        <Button fx:id="backButton" prefHeight="30.0" prefWidth="60.0" text="back"
+                AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="80.0"/>
+        <Button fx:id="doneButton" prefHeight="30.0" prefWidth="60.0" text="done"
+                AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0"/>
     </AnchorPane>
 </HBox>
