--- a/core/src/main/resources/fxml/scene/dictate.fxml
+++ b/core/src/main/resources/fxml/scene/dictate.fxml
@@ -1,47 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import org.pasr.gui.corpus.CorpusPane?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<?import org.pasr.gui.corpus.CorpusPane?>
-
 <HBox prefHeight="800.0" prefWidth="1280.0" xmlns:fx="http://javafx.com/fxml">
-    <CorpusPane fx:id="CorpusPane" orientation="VERTICAL" prefHeight="800.0" prefWidth="700.0"/>
+    <CorpusPane fx:id="corpusPane" orientation="VERTICAL" prefHeight="800.0" prefWidth="700.0"/>
     <AnchorPane prefHeight="800.0" prefWidth="580.0">
-        <AnchorPane fx:id="dictatePane" layoutX="10.0" layoutY="14.0" prefHeight="800.0"
-                    prefWidth="580.0" AnchorPane.bottomAnchor="46.0" AnchorPane.leftAnchor="10.0"
-                    AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="14.0">
-            <Label alignment="CENTER" layoutX="246.0" layoutY="6.0" prefHeight="20.0"
-                   prefWidth="100.0" text="ASR RESULT" AnchorPane.leftAnchor="0.0"
-                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
+        <AnchorPane fx:id="dictatePane"
+                    style="-fx-border-style: solid; -fx-border-width: 1; -fx-border-color: #D3D3D3;"
+                    AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0"
+                    AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0">
+            <Label alignment="CENTER" prefHeight="30.0" text="ASR RESULT"
+                   AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0"
+                   AnchorPane.topAnchor="10.0">
                 <font>
                     <Font name="Carlito Bold" size="20.0"/>
                 </font>
             </Label>
-            <TextArea fx:id="aSRResultTextArea" layoutX="190.0" layoutY="57.0" prefHeight="250.0"
-                      prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                      AnchorPane.topAnchor="40.0"/>
-            <Label alignment="CENTER" layoutX="244.0" layoutY="370.0" prefHeight="30.0"
-                   text="CORRECTED" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                   AnchorPane.topAnchor="300.0">
+            <TextArea fx:id="aSRResultTextArea" prefHeight="250.0" prefWidth="200.0"
+                      AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0"
+                      AnchorPane.topAnchor="50.0"/>
+            <Label alignment="CENTER" prefHeight="30.0" text="CORRECTED"
+                   AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0"
+                   AnchorPane.topAnchor="310.0">
                 <font>
                     <Font name="Carlito Bold" size="20.0"/>
                 </font>
             </Label>
-            <TextArea fx:id="correctedTextArea" layoutX="180.0" layoutY="354.0" prefHeight="250.0"
-                      prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                      AnchorPane.topAnchor="340.0"/>
-            <ToggleButton fx:id="dictateToggleButton" layoutX="227.0" layoutY="617.0"
-                          mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0"
-                          AnchorPane.leftAnchor="230.0" AnchorPane.topAnchor="650.0"/>
+            <TextArea fx:id="correctedTextArea" prefHeight="250.0" prefWidth="200.0"
+                      AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0"
+                      AnchorPane.topAnchor="350.0"/>
+            <Label fx:id="dictationDisabledLabel" visible="false" alignment="CENTER"
+                   textAlignment="CENTER" wrapText="true" prefHeight="60.0"
+                   AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0"
+                   AnchorPane.topAnchor="400.0">
+                <font>
+                    <Font name="Carlito Bold" size="20.0"/>
+                </font>
+            </Label>
+            <ToggleButton fx:id="dictateToggleButton" prefHeight="30.0" prefWidth="100.0"
+                          AnchorPane.leftAnchor="230.0" AnchorPane.topAnchor="610.0"/>
+            <CheckBox fx:id="useDefaultAcousticModelCheckBox" prefHeight="30.0" prefWidth="180.0"
+                      text="default acoustic model" AnchorPane.bottomAnchor="10.0"
+                      AnchorPane.leftAnchor="190.0"/>
         </AnchorPane>
-        <Button fx:id="backButton" layoutX="482.0" layoutY="743.0" mnemonicParsing="false"
-                prefHeight="30.0" prefWidth="60.0" text="back" AnchorPane.bottomAnchor="10.0"
-                AnchorPane.rightAnchor="10.0"/>
+        <Button fx:id="backButton" prefHeight="30.0" prefWidth="60.0" text="back"
+                AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0"/>
     </AnchorPane>
 </HBox>
