--- a/core/src/main/resources/fxml/console/view.fxml
+++ b/core/src/main/resources/fxml/console/view.fxml
@@ -3,7 +3,10 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.scene.control.Button?>
 <AnchorPane prefHeight="200.0" prefWidth="640.0" xmlns:fx="http://javafx.com/fxml">
     <TextArea fx:id="textArea" editable="false" AnchorPane.bottomAnchor="0.0"
               AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+    <Button fx:id="button" prefHeight="30.0" prefWidth="90.0" text="clear"
+            AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0"/>
 </AnchorPane>
