--- a/core/src/main/resources/fxml/scene/email_list.fxml
+++ b/core/src/main/resources/fxml/scene/email_list.fxml
@@ -6,16 +6,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<?import org.pasr.gui.email.tree.EmailTree?>
+<?import org.pasr.gui.email.tree.EmailTreeView?>
 
 <?import javafx.scene.control.ProgressIndicator?>
 <SplitPane dividerPositions="0.3" prefHeight="800.0" prefWidth="1280.0"
            xmlns:fx="http://javafx.com/fxml">
     <AnchorPane>
-        <EmailTree fx:id="emailTree" prefHeight="798.0" prefWidth="379.0"
-                   AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
-        <ProgressIndicator fx:id="progressIndicator" AnchorPane.bottomAnchor="20.0"
+        <EmailTreeView fx:id="emailTreeView" prefHeight="798.0" prefWidth="379.0"
+                       AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+                       AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+        <ProgressIndicator fx:id="progressIndicator" AnchorPane.bottomAnchor="20.0" visible="false"
                            AnchorPane.rightAnchor="20.0"/>
     </AnchorPane>
     <SplitPane dividerPositions="0.2" orientation="VERTICAL" prefHeight="798.0" prefWidth="891.0">
