--- a/src/main/resources/fxml/tree/folder_value.fxml
+++ b/src/main/resources/fxml/tree/folder_value.fxml
@@ -11,9 +11,14 @@
 <?import javafx.scene.control.ProgressIndicator?>
 <fx:root type="javafx.scene.layout.AnchorPane" xmlns:fx="http://javafx.com/fxml">
     <CheckBox fx:id="checkBox" AnchorPane.leftAnchor="0.0" disable="true"/>
-    <Label fx:id="label" AnchorPane.leftAnchor="20.0">
+    <Label fx:id="nameLabel" AnchorPane.leftAnchor="20.0">
         <font>
             <Font style="Bold" size="15.0"/>
+        </font>
+    </Label>
+    <Label fx:id="informationLabel" AnchorPane.rightAnchor="30.0">
+        <font>
+            <Font size="12.0"/>
         </font>
     </Label>
     <Button fx:id="button" minWidth="16.0" prefWidth="25.0" minHeight="16.0" prefHeight="18.0"
