--- a/src/main/resources/fxml/tree/folder_value.fxml
+++ b/src/main/resources/fxml/tree/folder_value.fxml
@@ -3,12 +3,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.control.ProgressIndicator?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
 
-<?import javafx.scene.control.ProgressIndicator?>
 <fx:root type="javafx.scene.layout.AnchorPane" xmlns:fx="http://javafx.com/fxml">
     <CheckBox fx:id="checkBox" AnchorPane.leftAnchor="0.0" disable="true"/>
     <Label fx:id="nameLabel" AnchorPane.leftAnchor="20.0">
@@ -16,19 +16,19 @@
             <Font style="Bold" size="15.0"/>
         </font>
     </Label>
-    <Label fx:id="informationLabel" AnchorPane.rightAnchor="30.0">
+    <Label fx:id="informationLabel" AnchorPane.rightAnchor="60.0">
         <font>
             <Font size="12.0"/>
         </font>
     </Label>
-    <Button fx:id="button" minWidth="16.0" prefWidth="25.0" minHeight="16.0" prefHeight="18.0"
-            AnchorPane.rightAnchor="0.0">
+    <ProgressIndicator fx:id="progressIndicator" minWidth="16.0" prefWidth="25.0" minHeight="16.0"
+                       visible="false" prefHeight="18.0" AnchorPane.rightAnchor="30.0"/>
+    <ToggleButton fx:id="toggleButton" minWidth="16.0" prefWidth="25.0" minHeight="16.0"
+                  prefHeight="18.0" AnchorPane.rightAnchor="0.0">
         <graphic>
             <ImageView>
                 <Image url="/icons/download_black.png"/>
             </ImageView>
         </graphic>
-    </Button>
-    <ProgressIndicator fx:id="progressIndicator" minWidth="16.0" prefWidth="25.0" minHeight="16.0"
-                       visible="false" prefHeight="18.0" AnchorPane.rightAnchor="0.0" />
+    </ToggleButton>
 </fx:root>
